fix(footer): left align

--- a/assets/css/storyblok.css
+++ b/assets/css/storyblok.css
@@ -41,7 +41,3 @@
   padding: 10px;
   color: #fff;
 }
-
-footer {
-  text-align: center;
-}
